--- a/users.html
+++ b/users.html
@@ -1,5 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
+
+
+    <style>
+        table, th, td{
+            border:1px solid black;
+        }         
+        th,td{
+            padding: 10px;
+
+        }
+        table>caption{
+            font-size: 50px;
+        }
+
+    </style>
+
+
+
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,6 +54,16 @@
             </ul>
         </div>
     </nav>
+    
+    <table class="table" style="width:100%">
+        <caption>Users!</caption>
+        <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Email</th>
+        </tr>
+    </table>
+  
     <footer>
         <hr>
         <div>
