add contact page feature

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact moon mole</title>
     <link rel="stylesheet" href="style/style_nav_footer.css">
+    <link rel="stylesheet" href="style/contact.css">
     <script src="https://kit.fontawesome.com/7c544095e5.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -36,11 +37,11 @@
     </nav>
     <section>
         <form>
-            <label for="email">enter email</label>
-            <input type="email" name="email" id="email" placeholder="Gmail,Yahoo" required>
-            <label for="mass">massage</label>
-            <textarea name="massage" cols="50" rows="15" id="mass"></textarea required>
-            <input type="submit" value="Send">
+            <label class="lemail" for="email">enter email</label>
+            <input class="email" type="email" name="email" id="email" placeholder="Gmail,Yahoo" required>
+            <label class="lmass" for="mass">massage</label>
+            <textarea class="mass" name="massage" id="mass" placeholder="enter your massage here and our response in 24 hour"></textarea required>
+            <input class="submit" type="submit" value="Send" name="massage" >
         </form>
     </section>
     <footer>
