--- a/users.html
+++ b/users.html
@@ -4,13 +4,22 @@
 
 
     <style>
+
+        .tablefix{ 
+            margin-left: 40px;
+            margin-right: 40px;
+            margin-top: 50px;
+        }
+
         table, th, td{
             border:1px solid black;
-        }         
+        }
+
         th,td{
             padding: 10px;
 
         }
+
         table>caption{
             font-size: 50px;
         }
@@ -54,16 +63,36 @@
             </ul>
         </div>
     </nav>
-    
-    <table class="table" style="width:100%">
-        <caption>Users!</caption>
-        <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Email</th>
-        </tr>
-    </table>
-  
+    <div class="tablefix">
+        <table class="table" style="width:100%">
+            <caption>Users!</caption>
+            <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Email</th>
+            </tr>
+            <tr>
+                <td>   </td>
+                <td>   </td>
+                <td>   </td>
+            </tr>  
+            <tr>
+                <td>   </td>
+                <td>   </td>
+                <td>   </td>
+            </tr>  
+            <tr>
+                <td>   </td>
+                <td>   </td>
+                <td>   </td>
+            </tr>  
+            <tr>
+                <td>   </td>
+                <td>   </td>
+                <td>   </td>
+            </tr>  
+        </table>
+    </div>  
     <footer>
         <hr>
         <div>
