--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style_nav_footer.css">
+    <link rel="stylesheet" href="style/login.css">
     <script src="https://kit.fontawesome.com/7c544095e5.js" crossorigin="anonymous"></script>
     <title>login moon mole</title>
 </head>
@@ -36,11 +37,11 @@
     </nav>
     <section>
         <form>
-            <label for="un">user name</label>
-            <input type="text" name="email" id="un" placeholder="user name or email" required>
-            <label for="pass">password</label>
-            <input type="password" name="pass" id="pass" placeholder="password"  minlength="8" maxlength="13" required>
-            <input type="submit" value="Login">
+            <label class="lemail" for="un">user name</label>
+            <input class="email" type="text" name="email" id="un" placeholder="user name or email" required>
+            <label class="lpass" for="pass">password</label>
+            <input class="pass" type="password" name="pass" id="pass" placeholder="password"  minlength="8" maxlength="13" required>
+            <input class="submit" type="submit" value="Login">
         </form>
     </section>
     <footer>
