--- a/users.html
+++ b/users.html
@@ -1,40 +1,14 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
-
-
-
-    <style>
-
-        .tablefix{ 
-            margin-left: 40px;
-            margin-right: 40px;
-            margin-top: 50px;
-        }
-
-        table, th, td{
-            border:1px solid black;
-        }
-
-        th,td{
-            padding: 10px;
-
-        }
-
-        table>caption{
-            font-size: 50px;
-        }
-
-    </style>
-
-
-
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Users</title>
     <link rel="stylesheet" href="style/style_nav_footer.css">
+    <link rel="stylesheet" href="style/users.css">
     <script src="https://kit.fontawesome.com/7c544095e5.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -63,22 +37,22 @@
             </ul>
         </div>
     </nav>
-    <div class="tablefix">
+    <section class="tablefix">
         <table class="table" style="width:100%">
-            <caption>Users!</caption>
+            <caption>Users</caption>
             <tr>
             <th>ID</th>
             <th>Name</th>
             <th>Email</th>
             </tr>
             <tr>
-                <td>   </td>
-                <td>   </td>
-                <td>   </td>
+                <td>1001</td>
+                <td>mahmoud hassan</td>
+                <td>mahmoudhassanamin123@gmail.com</td>
             </tr>  
             <tr>
-                <td>   </td>
-                <td>   </td>
+                <td>1002</td>
+                <td>esraa Hassouna</td>
                 <td>   </td>
             </tr>  
             <tr>
@@ -92,7 +66,7 @@
                 <td>   </td>
             </tr>  
         </table>
-    </div>  
+    </section>  
     <footer>
         <hr>
         <div>
