--- a/ray_bans_gfycat.html
+++ b/ray_bans_gfycat.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style_nav_footer.css">
+    <link rel="stylesheet" href="style/product.css">
     <script src="https://kit.fontawesome.com/7c544095e5.js" crossorigin="anonymous"></script>
-    <title>nike shoes 402</title>
+    <title>Ray bans Gfycat</title>
 </head>
 <body>
     <nav>
@@ -35,13 +36,12 @@
         </div>
     </nav>
     <section>
-        <img src="" alt="">
-        <h2>nike shoes 402</h2>
-        <pre>size:39-45
-            color:black-white-red-blue
-            cost:900 L.E
-        </pre>
-        <button>Purchase</button>
+        <img class="img2" src="style/materials/ray bans.gif" alt="nike shoes 402">
+        <h2 class="h2">Ray bans Gfycat</h2>
+        <p class="prag">
+            Size: Small-Medium-Large<br>color: black<br>Cost: 900 L.E
+        </p>
+        <button class="purchase">Purchase</button>
     </section>
     <footer>
         <hr>
