add nav bar script

--- a/bag.html
+++ b/bag.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <nav>
-        <i class="fa-duotone fa-bars menu" tabindex="-1"></i>
-        <div class="nav1">
+        <i class="fa-duotone fa-bars menu" id="m"></i>
+        <div class="nav1" id="n">
             <a href="index.html" class="homelink">
                 <img class="homelogo" src="style/materials/home.png" alt="moon mole logo">
             </a>
@@ -52,5 +52,6 @@
             <p>Copyright &copy; 2023 IOT|ITI intake 43</p>
         </div>
     </footer>
+    <script src="js/navmenu.js"></script>
 </body>
 </html>
