--- a/users.html
+++ b/users.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <nav>
-        <i class="fa-duotone fa-bars menu" tabindex="-1"></i>
-        <div class="nav1">
+        <i class="fa-duotone fa-bars menu" id="m"></i>
+        <div class="nav1" id="n">
             <a href="index.html" class="homelink">
                 <img class="homelogo" src="style/materials/home.png" alt="moon mole logo">
             </a>
@@ -53,7 +53,7 @@
             <tr>
                 <td>1002</td>
                 <td>esraa Hassouna</td>
-                <td>   </td>
+                <td>esraaHassouna2018@gmail.com</td>
             </tr>  
             <tr>
                 <td>   </td>
@@ -76,5 +76,6 @@
             <p>Copyright &copy; 2023 IOT|ITI intake 43</p>
         </div>
     </footer>
+    <script src="js/navmenu.js"></script>
 </body>
 </html>
